Create module Ponencia. Rename route

--- a/pn_page/templates/layout_2.html
+++ b/pn_page/templates/layout_2.html
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active"><a href="/index" class="nav-link">Inicio</a></li>
-                    <li class="nav-item"><a href="/ponent" class="nav-link">Ponentes</a></li>
+                    <li class="nav-item"><a href="/ponencias" class="nav-link">Ponentes</a></li>
                     <li class="nav-item"><a href="/contest" class="nav-link">Programacion</a></li>
                     <li class="nav-item"><a href="/contest2" class="nav-link">Posters</a></li>
                     <li class="nav-item"><a href="/register" class="nav-link">Regitrarse</a></li>
