--- a/pn_page/ponencia/templates/layout_2.html
+++ b/pn_page/ponencia/templates/layout_2.html
@@ -7,14 +7,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static',filename='css/style_02.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/style_01.css') }}" />
     {% endblock %}
 </head>
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
-            <a class="navbar-brand" href="/index">Eve<span>Page</span></a>
+            <a class="navbar-brand" href="/index">Eve<span>Page.</span></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
                 aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="oi oi-menu"></span> Menu
@@ -31,7 +31,9 @@
             </div>
         </div>
     </nav>
+
     <div id="content">{% block content %}{% endblock %}</div>
+
     <footer class="ftco-footer ftco-bg-dark ftco-section">
         <div class="container">
             <div class="row mb-5">
